--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-README.md filter=openssl diff=openssl sensitive.txt filter=openssl diff=openssl [merge] renormalize = true
+README.md filter=openssl diff=openssl sensitive.txt filter=openssl diff=openssl renormalize = true
 test.txt
 
