How many times?

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-README.md filter=openssl diff=openssl sensitive.txt filter=openssl diff=openssl renormalize = true
-test.txt
+README.md filter=openssl diff=openssl sensitive.txt filter=openssl diff=openssl
 
